...
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_box"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvAddNewMoodEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_title"
                android:gravity="center"
                android:paddingVertical="10dp"
...
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:thumbTint="@drawable/switch_thumb_tint"
                    app:trackTint="@drawable/switch_track_tint" />
            </LinearLayout>

...
                    android:text="@string/mood"
                    android:textColor="@color/textColor"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinnerMood"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/mood_options"
                    android:prompt="@string/select_mood" />


...
                    android:text="@string/reason_why"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:hint="Please type your thoughts here..."
                    android:inputType="textMultiLine"
                    android:maxLength="200"
                    android:maxLines="10"
                    android:padding="12dp" />

                <Button
                    android:id="@+id/AttachPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/buttonColor"
                    android:padding="8dp"
                    android:text="@string/attach_photo"
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/ivPhotoPreview"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />
...
                        android:text="@string/alone"
                        android:textColor="@color/textColor"
                        android:textSize="10sp"
                        app:buttonTint="@drawable/radio_button_tint"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbOneOnOne"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:gravity="center"
                        android:text="@string/one_on_one"
                        android:textColor="@color/textColor"
                        android:textSize="9sp"
                        android:backgroundTint="@color/primaryColor"
                        app:buttonTint="@drawable/radio_button_tint"/>

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/rbGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/group"
                        android:textColor="@color/textColor"
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAttachLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:backgroundTint="@color/buttonColor"
                        android:text="@string/detach_location"
                        android:textColor="@color/textColor" />
...
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnSaveEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/save_entry"
            android:textAllCaps="true"
...
