...
        </LinearLayout>

        <!-- ScrollView for the mood event cards -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rvMoodList"
            android:scrollbarStyle="insideOverlay">

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/rvMoodList"-->
...
