...
            android:textStyle="bold"
            android:textColor="@color/darkText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDialogDescription"
            android:text="Description:"
            android:layout_marginTop="12dp"
            android:textSize="14sp"
            android:textColor="@color/darkText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
...
            android:textSize="12sp"
            android:textColor="@color/darkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDialogSocial"
            android:text="Situation:"
            android:layout_marginTop="4dp"
            android:textSize="12sp"
            android:textColor="@color/darkText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

...
